<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TercerFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/fondo2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:src="@drawable/letras"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:contentDescription="@string/imagen" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/descripcionSplash"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="192dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:src="@drawable/cesmag_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/IdAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:text="Atras"
            android:textColor="#FF7C00"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/IdFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|end"
            android:text="@string/iniciar"
            android:textColor="#FF7C00"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>