<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bganara">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imagesetp"
                android:layout_width="320dp"
                android:layout_height="125dp"
                android:contentDescription="@string/c1"
                app:srcCompat="@drawable/letras" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo6"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:background="@drawable/fondo7"
                    android:contentDescription="@string/mapa"
                    android:padding="10dp"
                    app:srcCompat="@mipmap/mapa" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mapa"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo6"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:background="@drawable/fondo7"
                    android:contentDescription="@string/rutas"
                    app:srcCompat="@mipmap/road" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rutas"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo6"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:background="@drawable/fondo7"
                    android:contentDescription="@string/conductor"
                    android:padding="10dp"
                    app:srcCompat="@mipmap/man" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/conductor"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/backgroundcolor" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo6"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:background="@drawable/fondo7"
                    android:contentDescription="@string/acerca"
                    android:padding="10dp"
                    app:srcCompat="@mipmap/business" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/acerca"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/backgroundcolor" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo6"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:background="@drawable/fondo7"
                    android:contentDescription="@string/conductor"
                    android:padding="10dp"
                    app:srcCompat="@mipmap/config" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/configutacion"
                    android:textColor="@color/backgroundcolor"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>